--- a/api-guide/apis/enterprise-api/uncensored-chat/overview.mdx
+++ b/api-guide/apis/enterprise-api/uncensored-chat/overview.mdx
@@ -1,25 +1,20 @@
 ---
 title: "Enterprise: Uncensored Chat API"
+description: "Endpoints to start and manage uncensored chat conversations on your dedicated server."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+## Endpoints
 
-This endpoint allows you to start uncensored chat conversation
+<CardGroup cols={2}>
+  <Card title="Start Chat" icon="message-circle" href="/enterprise-api/uncensored-chat/start">
+    Start an uncensored chat conversation
+  </Card>
 
-* [start](/enterprise-api/uncensored-chat/start)
-* [clear cache](/enterprise-api/uncensored-chat/clear-cache)
-* [restart server](/enterprise-api/uncensored-chat/restart-server)
+  <Card title="Clear Cache" icon="trash" href="/enterprise-api/uncensored-chat/clear-cache">
+    Clear the API’s server cache for fresh processing
+  </Card>
 
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
-
-### Start Uncensored Chat[​](#start-uncensored-chat "Direct link to Start Uncensored Chat")
-
-This endpoint allows you to start uncensored chat
-
-### Clear Server Cache Endpoint[​](#clear-server-cache-endpoint "Direct link to Clear Server Cache Endpoint")
-
-This endpoint clear server cache
-
-### Restart Server Endpoint[​](#restart-server-endpoint "Direct link to Restart Server Endpoint")
-
-This endpoint restart the server
+  <Card title="Restart Server" icon="refresh" href="/enterprise-api/uncensored-chat/restart-server">
+    Restart your dedicated uncensored chat server
+  </Card>
+</CardGroup>
